<resources>
    <string name="app_name">Home Rental App</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="update">Update</string>
    <string name="hello_customer">Hello Customer</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="top_deals">Top Deals</string>
    <string name="update_details">Update Details</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="apply">Apply</string>
    <string name="rental_details">Rental Details</string>
    <string name="back">Back</string>
    <string name="home_heaven">Home Heaven</string>
    <string name="rent_a_house_for_you">Rent a House for You</string>
    <string name="get_started">Get Started</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="contact_support">Contact Support</string>
    <string name="about_us">About Us</string>
    <string name="faq">FAQ</string>
    <string name="your_favourites">Your Favourites</string>
    <string name="payments">Payments</string>
    <string name="promotions">Promotions</string>
    <string name="apartment">Apartment</string>
    <string name="condominium">Condominium</string>
    <string name="condo">Condo</string>
    <string name="bedroom_apartment">2 bedroom apartment</string>
    <string name="temple_rd_colombo_3">3/4,Temple Rd,Colombo 3</string>
    <string name="rs40000_per_month">RS40000 per month</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="joined">Joined in 2020</string>
    <string name="john">John Doe</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="add_details">Add Details</string>
    <string name="detail_description">
        Two-bedroom apartment: 2 bedrooms,
        living area, kitchen, bathroom. Ideal for roommates, individuals. </string>
    <string name="detail_description2">
Two-bedroom apartments may offer amenities like in-unit laundry,
        balconies, and access to gyms.  </string>
    <string name="todo">TODO</string>
    <string name="welcome_to_home_heaven">Welcome To Home Heaven</string>
    <string name="update2">Update</string>
</resources>