<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AccountFragment"
    android:background="@color/light_pink">

  <de.hdodenhof.circleimageview.CircleImageView
      android:id="@+id/profile_image1"
      android:layout_width="96dp"
      android:layout_height="96dp"
      android:src="@drawable/account_circle"
      android:layout_margin="16dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>


  <TextView
      android:id="@+id/textView14"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/update_details"
      android:textSize="34sp"
      android:textColor="@color/black"
      android:textStyle="bold"
      android:layout_marginTop="40dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintEnd_toEndOf="@+id/profile_image1"
      app:layout_constraintStart_toStartOf="@+id/profile_image1"
      app:layout_constraintTop_toBottomOf="@+id/profile_image1"/>

  <EditText
      android:id="@+id/editTextText2"
      android:layout_width="380dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:background="@drawable/edit_bg"
      android:ems="10"
      android:hint="@string/name"
      android:inputType="text"
      android:padding="20dp"
      app:layout_constraintEnd_toEndOf="@+id/textView14"
      app:layout_constraintStart_toStartOf="@+id/textView14"
      app:layout_constraintTop_toBottomOf="@+id/textView14"
      android:autofillHints="name"/>

  <EditText
      android:id="@+id/editTextTextEmailAddress3"
      android:layout_width="380dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:background="@drawable/edit_bg"
      android:ems="10"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:padding="20dp"
      app:layout_constraintEnd_toEndOf="@+id/editTextText2"
      app:layout_constraintStart_toStartOf="@+id/editTextText2"
      app:layout_constraintTop_toBottomOf="@+id/editTextText2"
      android:autofillHints="emailAddress"/>

  <EditText
      android:id="@+id/editTextText5"
      android:layout_width="380dp"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="text"
      android:hint="@string/contact_number"
      android:layout_marginTop="40dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:background="@drawable/edit_bg"
      android:padding="20dp"
      app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress3"
      app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress3"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress3"
      android:autofillHints="contactNumber"/>

  <EditText
      android:id="@+id/editTextTextPostalAddress"
      android:layout_width="380dp"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="textPostalAddress"
      android:hint="@string/address"
      android:layout_marginTop="40dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:background="@drawable/edit_bg"
      android:padding="20dp"
      app:layout_constraintEnd_toEndOf="@+id/editTextText5"
      app:layout_constraintStart_toStartOf="@+id/editTextText5"
      app:layout_constraintTop_toBottomOf="@+id/editTextText5"
      android:autofillHints="postalAddress"/>

  <Button
      android:id="@+id/button2"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="60dp"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:backgroundTint="@color/Dark_Green"
      android:text="@string/update"
      android:textSize="28sp"
      android:textStyle="bold"
      android:padding="14dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/editTextTextPostalAddress"
      app:layout_constraintStart_toStartOf="@+id/editTextTextPostalAddress"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress" />



</androidx.constraintlayout.widget.ConstraintLayout>