<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AccountFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        tools:context=".screens.HomeActivity"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_pink"
            tools:context=".fragment.AccountFragment">


            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="40dp"
                android:text="@string/menu"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView22"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/Dark_Green"
                android:padding="10dp"
                android:text="@string/about_us"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:cornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="@+id/textView22"
                app:layout_constraintStart_toStartOf="@+id/textView22"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView22"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/Dark_Green"
                android:padding="10dp"
                android:text="@string/contact_support"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:cornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="@+id/button13"
                app:layout_constraintStart_toStartOf="@+id/button13"
                app:layout_constraintTop_toBottomOf="@+id/button13" />

            <Button
                android:id="@+id/button15"
                android:backgroundTint="@color/Dark_Green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView22"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:padding="10dp"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:cornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="@+id/button14"
                app:layout_constraintStart_toStartOf="@+id/button14"
                app:layout_constraintTop_toBottomOf="@+id/button14" />

            <Button
                android:id="@+id/button16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button15"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/Dark_Green"
                android:padding="10dp"
                android:text="@string/faq"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:cornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="@+id/button15"
                app:layout_constraintStart_toStartOf="@+id/button15"
                app:layout_constraintTop_toBottomOf="@+id/button15" />

            <Button
                android:id="@+id/button17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Dark_Green"
                android:layout_below="@id/button16"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:padding="10dp"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:cornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="@+id/button16"
                app:layout_constraintStart_toStartOf="@+id/button16"
                app:layout_constraintTop_toBottomOf="@+id/button16" />

            <Button
                android:id="@+id/button18"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:layout_below="@id/button17"
                android:layout_marginStart="280dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/black"
                android:padding="10dp"
                android:text="@string/back"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/button17"
                app:layout_constraintStart_toStartOf="@+id/button17"
                app:layout_constraintTop_toBottomOf="@+id/button17" />





        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>