<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AccountFragment"
    android:background="@color/light_pink">


    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_favourites"
        android:textSize="34sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView22"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/Dark_Green"
        android:padding="10dp"
        android:text="@string/rental_details"
        android:textSize="28sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button5"
        android:layout_margin="20dp"
        android:backgroundTint="@color/Dark_Green"
        android:padding="10dp"
        android:text="@string/rental_details"
        android:textSize="28sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button6"
        android:layout_margin="20dp"
        android:backgroundTint="@color/Dark_Green"
        android:padding="10dp"
        android:text="@string/rental_details"
        android:textSize="28sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button7"
        android:layout_margin="20dp"
        android:backgroundTint="@color/Dark_Green"
        android:padding="10dp"
        android:text="@string/rental_details"
        android:textSize="28sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="@+id/button7"
        app:layout_constraintStart_toStartOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button8"
        android:layout_margin="20dp"
        android:backgroundTint="@color/Dark_Green"
        android:padding="10dp"
        android:text="@string/rental_details"
        android:textSize="28sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="@+id/button8"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button18"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/black"
        android:layout_below="@id/button9"
        android:layout_marginStart="280dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="14dp"
        android:padding="8dp"
        android:text="@string/back"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button9"
        app:layout_constraintStart_toStartOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button9" />








</androidx.constraintlayout.widget.ConstraintLayout>